<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="إدخال البيانات"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rec"
        style="@style/edt"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/namehala"
        android:inputType="textPersonName"
      />
    <EditText
        android:id="@+id/edit_number"
        style="@style/edt"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/number_needed"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/edit_number_phone"
        style="@style/edt"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/patient_phone"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/edit_number_des"
        style="@style/edt"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/des"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        />


    <Button
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
        android:text="@string/nextbtn"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:textSize="24sp"
       />
</LinearLayout>
</ScrollView>