<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/desire"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <RadioButton
        android:id="@+id/pat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/need"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <RadioButton
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campaign" />


</LinearLayout>