<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIS.SendNotificationsFragment"
    android:background="@color/colorPrimaryDark"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:background="#ff4d6d">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="متبرع"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/donors"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                style="@style/btn"
                android:id="@+id/send_notificatoin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/send_noti_btn"
                android:textSize="24sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="150dp"
            android:layout_margin="15dp"

            android:background="#ff4d6b"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noti_num"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="مستغيث"
                    android:textColor="@android:color/white"

                    android:textSize="36sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"

                    android:text="@string/nots"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/show_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                style="@style/btn"
                android:gravity="center"
                android:text="@string/notifications_show_btn"
                android:textSize="24sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="150dp"
            android:layout_margin="15dp"

            android:background="#ff4d6b">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/camp_num"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="حملة"
                    android:textColor="@android:color/white"

                    android:textSize="36sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"

                    android:text="@string/ca"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/show_camp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/camp"
                android:textSize="24sp"
                style="@style/btn"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reneed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/fragment_background"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="16dp"
                android:text="@string/yourepeat"
                android:textColor="#ff4d6b"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>
</ScrollView>