<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsPack.NotificationsFragment"
    android:background="#ffffff"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:background="#ff4d6b"
            android:layout_marginBottom="18dp"
            >

            <TextView
                android:id="@+id/news_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                />

        </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_margin="16dp"
               android:background="#ff4d6b"
               >

                <TextView
                    android:id="@+id/blood_type_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/blood_type"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"

                    />


           </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:background="#ff4d6b"
            android:layout_marginBottom="18dp"
            >

                <TextView
                    android:id="@+id/hospitals_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/values"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    />

        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:background="#ff4d6b"
            android:layout_marginBottom="18dp"
            >

                <TextView
                    android:id="@+id/medical_info_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/information"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    />


        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</FrameLayout>